# conversational-data-analyst

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/core/: __init__.py  config.py
src/db/: session.py
