[project]
name = "conversational-data-analyst"
version = "0.1.0"
description = ""
authors = [
    {name = "Oladimeji",email = "boladimeji834@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi (>=0.136.0,<0.137.0)",
    "uvicorn[standard] (>=0.46.0,<0.47.0)",
    "sqlalchemy[asyncio] (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "groq (>=1.2.0,<2.0.0)",
    "python-multipart (>=0.0.26,<0.0.27)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
